# ScriptRAG

./: .cursorrules  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  MEMORY.md  README.md  Telemetry.md  agent.py  app.py  cleanup_review.py  data_out.py  docker-compose.stack.yml  docker-compose.yml  docker-entrypoint.sh  extraction_graph.py  extraction_llm.py  ingest.py  langsmith_usage.py  lead_resolution.py  lexicon.json  master_lexicon.json  metrics.py  neo4j_loader.py  pipeline_runs.py  pipeline_state.json  pyproject.toml  render.yaml  strategy.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-config-script-generalized-dashboard/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md
.planning/phases/02-graph-reliability-empty-states/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/08-data-out-demo-flow/: 08-01-PLAN.md  08-01-SUMMARY.md  08-CONTEXT.md
.planning/phases/09-hitl-observability-copy/: 09-01-PLAN.md  09-01-SUMMARY.md
.planning/phases/10-demo-layout-flag/: 10-01-PLAN.md  10-01-SUMMARY.md
.planning/phases/11-verify-hitl-evidence-cards/: 11-01-PLAN.md  11-01-SUMMARY.md  (+1 more)
domains/screenplay/: adapter.py  audit_patch.py  audit_pipeline.py  auditors.py
etl_core/: audit_policy.py  config.py  graph_engine.py  state.py  telemetry.py
samples/: README.md
tools/: README.md  debug_export.py  producer_notes.py  qa_entities.py
(+4 files in other folders)
